<resources>
    <string name="app_name">TwitXClone</string>
    <string name="user_label">User</string>
    <string name="dob_label">DOB</string>
    <string name="send_msg">Send Message</string>
    <string name="send_bttn">Send</string>
    <string name="write_msg">Write your message here</string>
    <string name="signup_label">Sign Up</string>
    <string name="login_label">Login</string>
    <string name="pass_label">Password</string>
</resources>